--- a/pico2/wlc/config.json
+++ b/pico2/wlc/config.json
@@ -1,7 +1,7 @@
 {
     "version":"0.1",
     "wifi":{
-        "SSID":"ASUSa", 
-        "PASSWORD":"Framogtilbakeerlikelangt"
+        "SSID":"a", 
+        "PASSWORD":"F"
     }
 }
